--- a/packages/web/src/styles/layout/_responsive.scss
+++ b/packages/web/src/styles/layout/_responsive.scss
@@ -1,6 +1,6 @@
 @media screen and (min-width: 1960px) {
     .layout-main, .landing-wrapper {
-        width: 100%;
+        width: 1504px;
         margin-left: auto !important;
         margin-right: auto !important;
     }
@@ -32,7 +32,7 @@
 
         &.layout-static {
             .layout-main-container {
-                margin-left: 320px;
+                margin-left: 300px;
             }
 
             &.layout-static-inactive {
